@@ -42,6 +42,7 @@ synced with (i.e., indicating the visible offset and extent). -- David H rev 192
   specified colors and text colors.
   Added another example to test compact painter.  -- David H rev 2009
 * Added pt_BR localization supplied by Edimar Manica -- LarryK rev 2012
+* Fixed pt_BR localization -- LarryK rev 2015
     
 Version 2.3.1
 * timeline-api.js now uses
